--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p class="total">The total is:</p>
       
       <!-- Value of Cristal -->
-      <div class="container-value">
+      <div class="container-value"> `
         <div class="number-value">Value</div>
       </div>
 
